MDFloatingHeaderView: Fix margins and z-index
Margins were awkward for a child of a flexbox.

The view following this view should be placed underneath it so this
view must have a z-index higher than it.

--- a/classes/MDFloatingHeaderView/MDFloatingHeaderView.css
+++ b/classes/MDFloatingHeaderView/MDFloatingHeaderView.css
@@ -13,8 +13,9 @@
     justify-content:            center;
     -webkit-justify-content:    center;
     -ms-flex-pack:              center;
-    margin:                     0 auto -30px;
-    width:                      960px;
+    margin:                     0 0 -30px;
+    position:                   relative;
+    z-index:                    2;
 }
 
 .MDFloatingHeaderView ul {
